--- a/papers/gpce2013/sigplanconf.cls
+++ b/papers/gpce2013/sigplanconf.cls
@@ -27,7 +27,7 @@
 
 
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
-\ProvidesClass{sigplanconf}[2013/02/22 v2.6 ACM SIGPLAN Proceedings]
+\ProvidesClass{sigplanconf}[2013/07/02 v2.8 ACM SIGPLAN Proceedings]
 
 % The following few pages contain LaTeX programming extensions adapted
 % from the ZzTeX macro package.
@@ -337,9 +337,7 @@
 % Text area:
 
 \newdimen{\standardtextwidth}
-%\setlength{\standardtextwidth}{42pc}
 \setlength{\standardtextwidth}{42pc}
-
 
 \if \@onecolumn
   \setlength{\textwidth}{40.5pc}
@@ -349,7 +347,7 @@
 
 \setlength{\topskip}{8pt}
 \setlength{\columnsep}{2pc}
-\setlength{\textheight}{52.5pc}
+\setlength{\textheight}{54.5pc}
 
 % Running foot:
 
@@ -577,7 +575,7 @@
 
 \def \@copyrightspace {%
   \@float{copyrightbox}[b]%
-  \vbox to 1in{%
+  \vbox to 1.2in{%
     \vfill
     \parbox[b]{20pc}{%
       \scriptsize
@@ -595,91 +593,115 @@
       \fi}}%
   \end@float}
 
+\newcommand{\reprintprice}[1]{%
+  \gdef \@reprintprice {#1}}
+
+\reprintprice{\$15.00}
+
 \long\def \toappear #1{%
   \def \@toappear {#1}}
 
 \toappear{%
   \noindent \@permission \par
   \vspace{2pt}
-  \noindent \textsl{\@conferencename}\quad \@conferenceinfo \par
+  \noindent \textsl{\@conferencename}, \quad \@conferenceinfo. \par
   \noindent Copyright \copyright\ \@copyrightyear\ ACM \@copyrightdata
-    \dots \@reprintprice\par}
+    \dots \@reprintprice.\par
+  \noindent http://dx.doi.org/10.1145/\@doi }
 
 \newcommand{\permission}[1]{%
   \gdef \@permission {#1}}
 
 \permission{%
-  Permission to make digital or hard copies of all or
-  part of this work for personal or classroom use is granted without
-  fee provided that copies are not made or distributed for profit or
-  commercial advantage and that copies bear this notice and the full
-  citation on the first page.  To copy otherwise, to republish, to
+  Permission to make digital or hard copies of all or part of this work for
+  personal or classroom use is granted without fee provided that copies are
+  not made or distributed for profit or commercial advantage and that copies
+  bear this notice and the full citation on the first page. Copyrights for
+  components of this work owned by others than ACM must be honored.
+  Abstracting with credit is permitted. To copy otherwise, or republish, to
   post on servers or to redistribute to lists, requires prior specific
-  permission and/or a fee.}
+  permission and/or a fee. Request permissions from permissions@acm.org.}
 
-% Here we have some alternate permission statements and copyright lines:
+% These are two new rights management and bibstrip text blocks.
+
+\newcommand{\exclusivelicense}{%
+  \permission{%
+    Permission to make digital or hard copies of all or part of this work for
+    personal or classroom use is granted without fee provided that copies are
+    not made or distributed for profit or commercial advantage and that copies
+    bear this notice and the full citation on the first page. Copyrights for
+    components of this work owned by others than the author(s) must be honored.
+    Abstracting with credit is permitted. To copy otherwise, or republish, to
+    post on servers or to redistribute to lists, requires prior specific
+    permission and/or a fee. Request permissions from permissions@acm.org.}
+  \toappear{%
+    \noindent \@permission \par
+    \vspace{2pt}
+    \noindent \textsl{\@conferencename}, \quad \@conferenceinfo. \par
+    \noindent Copyright is held by the owner/author(s). Publication rights licensed to ACM. \par
+    \noindent ACM \@copyrightdata \dots \@reprintprice.\par
+    \noindent http://dx.doi.org/10.1145/\@doi}}
+
+\newcommand{\permissiontopublish}{%
+  \permission{%
+    Permission to make digital or hard copies of part or all of this work for
+    personal or classroom use is granted without fee provided that copies are
+    not made or distributed for profit or commercial advantage and that copies
+    bear this notice and the full citation on the first page. Copyrights for
+    third-party components of this work must be honored. 
+    For all other uses, contact the owner/author(s).}%
+  \toappear{%
+    \noindent \@permission \par
+    \vspace{2pt}
+    \noindent \textsl{\@conferencename}, \quad \@conferenceinfo. \par
+    \noindent Copyright is held by the owner/author(s). \par
+    \noindent ACM \@copyrightdata.\par
+    \noindent http://dx.doi.org/10.1145/\@doi}}
+
+% The following permission notices are
+% for the traditional copyright transfer agreement option.
+
+% Exclusive license and permission-to-publish 
+% give more complicated permission notices.
+% These are not covered here.
 
 \newcommand{\ACMCanadapermission}{%
   \permission{%
-    Copyright \@copyrightyear\ Association for Computing Machinery.
-    ACM acknowledges that
-    this contribution was authored or co-authored by an affiliate of the
-    National Research Council of Canada (NRC).
-    As such, the Crown in Right of
-    Canada retains an equal interest in the copyright, however granting
-    nonexclusive, royalty-free right to publish or reproduce this article,
-    or to allow others to do so, provided that clear attribution
-    is also given to the authors and the NRC.}}
+    ACM acknowledges that this contribution was authored or
+    co-authored by an affiliate of the Canadian National
+    Government. As such, the Crown in Right of Canada retains an equal
+    interest in the copyright. Reprint requests should be forwarded to
+    ACM.}}
 
 \newcommand{\ACMUSpermission}{%
   \permission{%
-    Copyright \@copyrightyear\ Association for
-    Computing Machinery. ACM acknowledges that
-    this contribution was authored or co-authored
-    by a contractor or affiliate
-    of the U.S. Government. As such, the Government retains a nonexclusive,
-    royalty-free right to publish or reproduce this article,
-    or to allow others to do so, for Government purposes only.}}
-
-\newcommand{\authorpermission}{%
-  \permission{%
-    Copyright is held by the author/owner(s).}
-  \toappear{%
-    \noindent \@permission \par
-    \vspace{2pt}
-    \noindent \textsl{\@conferencename}\quad \@conferenceinfo \par
-    ACM \@copyrightdata.}}
-
-\newcommand{\Sunpermission}{%
-  \permission{%
-    Copyright is held by Sun Microsystems, Inc.}%
-  \toappear{%
-    \noindent \@permission \par
-    \vspace{2pt}
-    \noindent \textsl{\@conferencename}\quad \@conferenceinfo \par
-    ACM \@copyrightdata.}}
+    ACM acknowledges that this contribution was authored or
+    co-authored by a contractor or affiliate of the United States
+    Government. As such, the United States Government retains a
+    nonexclusive, royalty-free right to publish or reproduce this
+    article, or to allow others to do so, for Government purposes
+    only.}}
 
 \newcommand{\USpublicpermission}{%
   \permission{%
     This paper is authored by an employee(s) of the United States
-    Government and is in the public domain.}%
+    Government and is in the public domain. Non-exclusive copying or
+    redistribution is allowed, provided that the article citation is
+    given and the authors and the agency are clearly identified as its
+    source.}%
   \toappear{%
     \noindent \@permission \par
     \vspace{2pt}
-    \noindent \textsl{\@conferencename}\quad \@conferenceinfo \par
-    ACM \@copyrightdata.}}
-
-\newcommand{\reprintprice}[1]{%
-  \gdef \@reprintprice {#1}}
-
-\reprintprice{\$15.00}
+    \noindent \textsl{\@conferencename}, \quad \@conferenceinfo. \par
+    \noindent ACM \@copyrightdata.\par
+    \noindent http://dx.doi.org/10.1145/\@doi}}
 
 \newcommand{\authorversion}[4]{%
   \permission{%
   Copyright \copyright\ ACM, #1. This is the author's version of the work.
   It is posted here by permission of ACM for your personal use.
   Not for redistribution. The definitive version was published in
-  #2, #3, http://doi.acm.org/10.1145/#4.}}
+  #2, #3, http://dx.doi.org/10.1145/#4.}}
 
 %                       Enunciations
 %                       ------------
@@ -830,6 +852,9 @@
   \gdef \@copyrightdata {#1}}
 
 \let \crdata = \copyrightdata
+
+\newcommand{\doi}[1]{%
+  \gdef \@doi {#1}}
 
 \newcommand{\proceedings}[1]{%
   \gdef \@proceedings {#1}}
@@ -1276,3 +1301,11 @@
 
 %  2013.02.22   PCA     2.6     Change natbib fences to parentheses when
 %                                 using 'authoryear' style.
+
+%  2013.05.17   PCA     2.7     Change standard and author copyright text.
+
+%  2013.07.02   TU      2.8     More changes to permission/copyright notes.
+%                               Replaced ambiguous \authorpermission with
+%                               \exclusivelicense and \permissiontopublish
+ 
+
