--- a/papers/icwe14/references.bib
+++ b/papers/icwe14/references.bib
@@ -1,5 +1,16 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+@inproceedings{leijen1999domain,
+  title={Domain specific embedded compilers},
+  author={Leijen, Daan and Meijer, Erik},
+  booktitle={ACM Sigplan Notices},
+  volume={35},
+  number={1},
+  pages={109--122},
+  year={1999},
+  organization={ACM}
+}
+
 @incollection{liberty2011reactive,
   title={Reactive Extensions for JavaScript},
   author={Liberty, Jesse and Betts, Paul},
