--- a/papers/icwe14/icwe14.tex
+++ b/papers/icwe14/icwe14.tex
@@ -77,7 +77,7 @@ Encoding dynamically typed APIs in statically typed languages can be challenging
 
 We recently observed the emergence of several statically typed programming languages compiling to JavaScript (\emph{e.g.} Java/GWT~\cite{Kereki09_GWT}, Dart~\cite{Griffith11_Dart}, TypeScript~\cite{fenton2012typescript}, Kotlin\footnote{\href{http://kotlin.jetbrains.org}{http://kotlin.jetbrains.org}}, Opa\footnote{\href{http://opalang.org}{http://opalang.org}}, SharpKit\footnote{\href{http://sharpkit.net}{http://sharpkit.net}}, Haxe~\cite{Cannasse08_HaXe}, Idris~\cite{Brady13_Idris}, Elm~\cite{czaplicki2012elm}). Developers can use them to write the client-side part of their Web applications, relying on a \emph{foreign function interface} mechanism to call the Web browser native API.
 
-However we observe that, despite these languages are statically typed, their integration of the browser API either is not type safe or gives less expression power to developers. Indeed, integrating an API designed for a dynamically typed language into a statically typed language can be challenging. For instance, the \jscode{createElement} function return type depends on the value of the \jscode{String} parameter it is passed.
+However we observe that, despite these languages are statically typed, their integration of the browser API either is not type safe or gives less expression power to the developers. Indeed, integrating an API designed for a dynamically typed language into a statically typed language can be challenging. For instance, the \jscode{createElement(name)} function return type depends on the value of its \jscode{name} parameter: \jscode{createElement('div')} returns a \jscode{DivElement}, \jscode{createElement('input')} returns an \jscode{InputElement}, \emph{etc}. Existing languages expose this function by making it return an \jscode{Element} (the least upper bound of the types of all the possible returned values), though a more precise type could be known at compile-time. Another way to expose this function consists in exposing several functions, each one fixing the value of the \jscode{name} parameter along with its return type. The first solution is not type safe and the second solution does not scale.
 
 This paper reviews some common functions of the browser API, identifies those which are not well encoded in statically typed programming languages and shows new ways to encode them with more type safety while keeping the native API expression power. We find that type parameters are sufficient to achieve this goal and that \emph{path-dependent types} provide an even more convenient encoding for the end developers.
 
